fix(foilsigh): make sure that dark mode styles get printed out

--- a/apps/foilsigh/assets/css/utils/_media.scss
+++ b/apps/foilsigh/assets/css/utils/_media.scss
@@ -19,7 +19,7 @@
   } @else {
     #{$property}: var(--#{$property}, $light);
     @media (prefers-color-scheme: dark) {
-      --#{$property}: $dark;
+      --#{$property}: #{$dark};
     }
   }
 }
